--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,34 +1,38 @@
-name: Deploy Vite React App to GitHub Pages
-
-permissions:
-  contents: write
+name: Build and Deploy (Vite React -> GitHub Pages)
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]     # ← main にプッシュしたら実行
+  workflow_dispatch:        # ← 手動実行ボタン
+
+permissions:
+  contents: write           # gh-pages へ書き込みに必要
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Setup Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
-          node-version: 18
+          node-version: 20
+          cache: 'npm'
+          cache-dependency-path: frontend/package-lock.json
 
       - name: Install dependencies
-        run: cd frontend && npm install
+        working-directory: frontend
+        run: npm ci || npm install
 
       - name: Build project
-        run: cd frontend && npm run build
+        working-directory: frontend
+        run: npm run build
 
       - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
+        uses: peaceiris/actions-gh-pages@v4
         with:
-  github_token: ${{ secrets.GITHUB_TOKEN }}
-  publish_dir: ./frontend/dist
-  
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./frontend/dist   # ← ここが肝！
