--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,11 +2,11 @@ name: Build and Deploy (Vite React -> GitHub Pages)
 
 on:
   push:
-    branches: [ main ]     # ← main にプッシュしたら実行
-  workflow_dispatch:        # ← 手動実行ボタン
+    branches: [ main ]
+  workflow_dispatch:
 
 permissions:
-  contents: write           # gh-pages へ書き込みに必要
+  contents: write
 
 jobs:
   build-and-deploy:
@@ -21,7 +21,6 @@ jobs:
         with:
           node-version: 20
           cache: 'npm'
-          cache-dependency-path: frontend/package-lock.json
 
       - name: Install dependencies
         working-directory: frontend
@@ -35,4 +34,5 @@ jobs:
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./frontend/dist          github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./frontend/dist   # ← ここが肝！
