--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,29 +1,25 @@
-name: Build and Deploy (Vite React -> GitHub Pages)
+name: Build and Deploy
 
 on:
   push:
     branches: [ main ]
   workflow_dispatch:
 
-permissions:
-  contents: write
-
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Setup Node.js
- 　　 uses: actions/setup-node@v4
-  　　with:
-   　　 node-version: 20
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
 
       - name: Install dependencies
         working-directory: frontend
-        run: npm ci || npm install
+        run: npm install
 
       - name: Build project
         working-directory: frontend
