--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,12 +1,13 @@
 {
   "name": "lboss-app",
-  "private": true,
   "version": "0.0.1",
+  "private": true,
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview --port 4173"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "react": "^18.3.1",
@@ -14,6 +15,9 @@
     "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
-    "vite": "^5.4.2"
-  }
+    "vite": "^5.4.2",
+    "@vitejs/plugin-react": "^4.3.1",
+    "gh-pages": "^6.1.1"
+  },
+  "homepage": "https://chappy-sally.github.io/lboss-app/"
 }
